--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-svg": "^13.14.1",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
